# contentin

./: .gitignore  Cargo.toml  build.rs  entry.capnp  gen_stat.py
ci-capnp/: Cargo.toml  build.rs
ci-capnp/src/: entry_capnp.rs  lib.rs  read.rs  write.rs
ci-dump/: Cargo.toml
ci-dump/src/: main.rs
ci-gen/: Cargo.toml  gen_stat.py
ci-gen/scripts/: crap  crap2  make-examples.sh  test-file.sh
ci-gen/src/: entry_capnp.rs  errors.rs  filetype.rs  main.rs  output_capnp.rs  simple_time.rs  slist.rs  stat.rs  tee.rs  unpacker.rs
ci-gen/tests/: byte_flip.tar  byte_flip.tar.bz2  byte_flip.tar.xz  entries.rs  fs.rs  manual.rs  real.rs  simple.tar  simple.tar.bz2  simple.tar.xz
ci-gen/tests/examples/: byte_flip.tar.bz2  simple.tar  simple.tar.bz2
ci-gen/tests/real/: .Makefile.yml  .all-types-tiny.img.yml  .bad-partition.img.yml  .broken_cd.zip.yml  .gpt.img.yml  .incons-cdoffset.zip.yml  Makefile  gpt.img
ci-pipe/: Cargo.toml
ci-pipe/src/: entry_capnp.rs  main.rs
ci-py/: Makefile  ci-py
ci-shared/: build.rs
ci-splay/: Cargo.toml
ci-splay/src/: main.rs
ci_capnp/: Cargo.toml
ci_capnp/src/: entry_capnp.rs  lib.rs
src/: entry_capnp.rs  filetype.rs  main.rs  slist.rs  stat.rs  tee.rs
