[package]
name = "contentin"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

[dependencies]
# tool
clap = "2.23.3"
regex = "0.2.2"

# format support
ar = "0.2.0"
bzip2 = "0.3.2"
libflate = "0.1.5"
tar = "0.4"
xz2 = "0.1.3"
zip = "0.2.3"

# general utilities
users = "0.5.2"
tempfile = "2.1.5"
time = "0.1.37"

[profile.release]
lto = true
