[package]
name = "ci-gen"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

edition = "2018"

[dependencies]
# tool
ci-capnp = { path = "../ci-capnp" }
capnp = "0.8"
clap = "2"

# format support
ar = "0.2"
bootsector = "0.1"
bzip2 = "0.3"
ext4 = "0.4"
libflate = "0.1"
tar = "0.4"
xz2 = "0.1.4"
zip = "0.2"

# general utilities
error-chain = "0.10"
users = "0.5"
tempfile = "2"
time = "0.1"

[build-dependencies]
capnpc = "0.8"

[dev-dependencies]
crc = "1"
diff = "0.1"
tempdir = "0.3"
