[package]
name = "ci-gen"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

edition = "2021"

[dependencies]
# tool
ci-capnp = { path = "../ci-capnp" }
capnp = "0.14"
clap = "3"

# format support
ar = "0.9"
bootsector = "0.1"
bzip2 = "0.4"
ext4 = "0.4"
libflate = "1"
tar = "0.4"
xz2 = "0.1.4"
zip = "0.6"

# general utilities
error-chain = "0.10"
users = "0.11"
tempfile = "3"
time = "0.3"

[build-dependencies]
capnpc = "0.14"

[dev-dependencies]
crc = "1"
diff = "0.1"
tempdir = "0.3"
